# University-Game

./: Cargo.toml  README.md
database/migrations/: 0001_create_table.sql
database/requests/insert/: insert_questions.sql
src/: content_loader.rs  main.rs
src/database/: mod.rs
src/game_mechanic/: mechanic.rs  structs.rs
src/web_application/: mod.rs
src/web_application/views/: mod.rs
src/web_application/views/admin/: mod.rs  question_form.rs  structs.rs
templates/html/: admin_question.html
