[package]
name = "University-Game"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4.8.0"}
actix-web-actors = "4.3.0"
tokio = {version = "1.38.0", features = ["full"]}
rand = "0.9.0-alpha.1"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "runtime-tokio-rustls", "postgres", "sqlite", "migrate"]}
serde = "1.0.203"
serde_json = "1.0.117"
redis = "0.25.4"